# pair-trading-cointegration

./: .gitignore  README.md  pyproject.toml
docs/: README.md
tests/: test_calc_cointegration.py  test_fiture_to_scg_string.py  test_merge_df.py  test_scg_holder.html
tests/test_data/: KO.csv  PEP.csv
