[tool.poetry]
name = "stock_pair_cointegration"
version = "0.1.0"
description = ""
authors = ["tim-hub <tim-hub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arch = "^7.2.0"
numpy = "^2.2.0"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
